# stock_predictor

./: .gitignore  README.md  db.sqlite3  pyproject.toml
accounts/: forms.py  models.py  urls.py  views.py
accounts/templates/accounts/: add_stock.html  login.html  logout.html  pass_word_reset.html  password_change.html  (+7 more)
base/: models.py  urls.py  utils.py  views.py
base/migrations/: 0001_initial.py
predictions/: models.py  views.py
predictions/migrations/: 0001_initial.py  0002_delete_stock.py
recommendation/: models.py  views.py
recommendation/migrations/: 0001_initial.py
scaler/: AJ네트웍스_scaler.pkl  AK홀딩스_scaler.pkl  BGF_scaler.pkl  BGF리테일_scaler.pkl  BNK금융지주_scaler.pkl  BYC_scaler.pkl  BYC우_scaler.pkl  CJ CGV_scaler.pkl  CJ4우(전환)_scaler.pkl  CJ_scaler.pkl  CJ대한통운_scaler.pkl  CJ씨푸드1우_scaler.pkl  CJ씨푸드_scaler.pkl  CJ우_scaler.pkl  CJ제일제당 우_scaler.pkl  CJ제일제당_scaler.pkl  CR홀딩스_scaler.pkl  CS홀딩스_scaler.pkl  DB_scaler.pkl  DB금융투자_scaler.pkl  DB손해보험_scaler.pkl  DB하이텍_scaler.pkl  DGB금융지주_scaler.pkl  DI동일_scaler.pkl  DL_scaler.pkl  DL우_scaler.pkl  DL이앤씨2우(전환)_scaler.pkl  DL이앤씨_scaler.pkl  DL이앤씨우_scaler.pkl  DN오토모티브_scaler.pkl  DRB동일_scaler.pkl  DSR_scaler.pkl  DSR제강_scaler.pkl  E1_scaler.pkl  ESR켄달스퀘어리츠_scaler.pkl  F&F_scaler.pkl  F&F홀딩스_scaler.pkl  GKL_scaler.pkl  GS_scaler.pkl  GS건설_scaler.pkl  (+1847 more)
static/css/: add_stock.css  footer.css  header.css  home.css  login.css  model_performance.css  password_reset.css  predict.css  prediction_result.css  recommendation.css  register.css  stock_predict.css  style.css  view_stocks.css
stock_predictor/: settings.py  urls.py
(+8 files in other folders)
